# omnilock-cli

./: Cargo.toml  LICENSE  Makefile  README.md  open_transaction.md
src/: add.rs  arg_parser.rs  build_addr.rs  client.rs  config.rs  config.yaml  generate.rs  keystore.rs  main.rs  sign.rs  signer.rs  txinfo.rs  util.rs
