[package]
name = "omnilock-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
ckb-types = "=0.104.0"
serde_yaml = "0.8.23"
yaml-rust = "0.4.3"

ckb-sdk = "1.0.1"
dirs = "1.0.5"