[package]
name = "omnilock-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }

ckb-crypto = { version = "=0.104.0", features = ["secp"] }
ckb-hash = "=0.104.0"
ckb-jsonrpc-types = "=0.104.0"
# ckb-sdk = "1.0.1"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-sdk-rust.git", branch = "master" }
ckb-types = "=0.104.0"

dirs = "1.0.5"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.23"

yaml-rust = "0.4.3"

jsonrpc-core = "18"

secp256k1 = { version = "0.20", features = ["recovery"] }